ACC-80 - Fix layout issues with main and slideover drawer

--- a/assets/css/components/editor.css
+++ b/assets/css/components/editor.css
@@ -35,9 +35,9 @@
   }
 
   pre {
-    background-color: theme("colors.gray.50");
-    color: theme("colors.gray.900");
-    border: 1px solid theme("colors.gray.200");
+    background-color: theme("colors.zinc.950");
+    color: theme("colors.zinc.50");
+    border: 1px solid theme("colors.zinc.700");
     margin-top: theme("spacing.2");
     font-family: "JetBrainsMono", monospace;
     padding: theme("spacing.3");
